--- a/price/price/index.html
+++ b/price/price/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
     <title>Price Component</title>
 </head>
 <body>
